--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="../assets/css/button-style.css">
+    <link rel="stylesheet" href="./assets/css/button-style.css">
+    <link rel="stylesheet" href="./assets/css/carousel.css">
 
     <style>
         * {
@@ -20,38 +21,6 @@
             font-size: 1.0rem;
             text-align: left;
             width: 50%;
-        }
-
-        .carousel-item img {
-            width: 50%;
-            float: inline-end;
-        }
-
-        .carousel-caption {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            padding: 1rem;
-            color: #fff;
-        }
-
-
-        .caption-text h1 {
-            font-weight: bold;
-            font-size: 36px;
-        }
-
-        .caption-text {
-            text-align: left;
-        }
-
-        .caption-text p {
-            font-size: 24px;
-        }
-
-        .carousel-caption {
-            margin-right: auto;
         }
 
         .custom-heading {
@@ -123,7 +92,7 @@
                         <a class="btn btn-primary m-2" href="#" role="button">Contact Us</a>
                     </div>
                 </div>
-                <img src="../assets/images/third-slider-image.svg" class="d-block w-50" alt="...">
+                <img src="../assets/images/third-slider-image.svg" class="d-block w-50" alt="image">
             </div>
             <div class="carousel-item">
                 <div class="carousel-caption text-start text-dark">
