--- a/pages/services.html
+++ b/pages/services.html
@@ -11,6 +11,24 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../components/navbar.css">
     <link rel="stylesheet" href="../components/services.css">
+    <style>
+         @keyframes fadeUp {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+        
+        /* Apply animation to cards and .row elements */
+        .card,
+        .row {
+            animation: fadeUp 0.5s ease forwards;
+        }
+    </style>
 </head>
 
 <body class="bg-light">
@@ -40,7 +58,7 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
+            <div class="fade-up-section col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
                 <div class="cards-sec">
                     <div class="card text-center">
                         <div class="icon">
@@ -52,8 +70,8 @@
                     </div>
                 </div>
             </div>
-            <div class="card-p  text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
-                <p class=" description">
+            <div class="fade-up-section card-p  text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
+                <p class=" description" style="padding-top: 60px;">
                     Developing innovative end-to-end software products
                     which involves complex methods and decisions. With product engineering services ideas can be easily evaluated, fast implementation and mapping of product development. With right approach quality, usability,
                     functionality and durability of the product can be achieved.
@@ -69,12 +87,12 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-           <div class="card-p card-tr text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
-                <p class=" description">
+           <div class="fade-up-section card-p card-tr text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
+                <p class=" description" style="padding-top: 60px;">
                     Designs, web layouts and other visual templates are developed on the project model considering brand persona. All aspects of user-end interactions with the company, its services are developed through research, experimentation and continuous improvement. UX and UI go hand in hand as they focus on tangible elements and its functionality that encompasses all business goals.
                 </p>
             </div>
-            <div class="col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
+            <div class="fade-up-section col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
                 <div class="cards-sec">
                     <div class="card-r text-center justify-content-end">
                         <div class="icon">
@@ -90,7 +108,7 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
+            <div class="fade-up-section col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
                 <div class="cards-sec">
                     <div class="card text-center">
                         <div class="icon">
@@ -101,8 +119,8 @@
                     </div>
                 </div>
             </div>
-            <div class="card-p  text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
-                <p class=" description">
+            <div class="fade-up-section card-p  text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
+                <p class=" description" style="padding-top: 60px;">
                     Automatic deployment in code, management of databases, app releases by cost effective digital
                     business models increases benefits in the organization. Architecting, planning, implementing and
                     operating models on cloud benefits agility, scalability, connectivity and increases the competitive
@@ -119,12 +137,12 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-           <div class="card-p card-tr text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
-                <p class=" description">
+           <div class="fade-up-section card-p card-tr text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
+                <p class=" description" style="padding-top: 60px;">
                     Increase visibility of products or services based on your business models. Better visibility on your web pages gather attention with search results, building trust of existing customers and new ones. We help you become easily visible in vastness of internet by optimizing right keywords or key phrases and advance search algorithms to reach higher rank in the search results.
                 </p>
             </div>
-            <div class="col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
+            <div class="fade-up-section col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
                 <div class="cards-sec">
                     <div class="card-r text-center justify-content-end">
                         <div class="icon">
@@ -140,7 +158,7 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
+            <div class="fade-up-section col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
                 <div class="cards-sec">
                     <div class="card text-center">
                         <div class="icon">
@@ -151,8 +169,8 @@
                     </div>
                 </div>
             </div>
-            <div class="card-p  text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
-                <p class=" description">
+            <div class="fade-up-section card-p  text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
+                <p class=" description" style="padding-top: 60px;">
                     We build the story for your product that defines your brand identity. We create brands that pass the test of time. Extensive experience in branding, we provide all products/services branding from logo to web services. Different sectors products need to be marketed differently to reach wide customers attention. We know how to tailor those needs and make your brand stand out.
                 </p>
             </div>
@@ -161,12 +179,12 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-           <div class="card-p card-tr text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
-                <p class=" description">
+           <div class="fade-up-section card-p card-tr text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
+                <p class=" description" style="padding-top: 60px;">
                     Providing analysis, right-approach which decreases the revision strategy planning in developing the model based on project requirement. With consultancy, easily monitor software updates, security and customize software systems. Smooth transitions between the teams can be achieved.
                 </p>
             </div>
-            <div class="col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
+            <div class="fade-up-section col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
                 <div class="cards-sec">
                     <div class="card-r text-center justify-content-end">
                         <div class="icon">
@@ -194,7 +212,7 @@
                 </div>
             </div>
             <div class="card-p  text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
-                <p class=" description">
+                <p class=" description" style="padding-top: 60px;">
                     Processing the feed-back between development and operational team can be automated to deploy faster apps. Continuously implementing evolving DevOps automation with certain standards, dynamic variables to equip flexibility in CI/CD approach to improve developer productivity.
                 </p>
             </div>
@@ -203,12 +221,12 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-           <div class="card-p card-tr text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
-                <p class=" description">
+           <div class="fade-up-section card-p card-tr text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
+                <p class=" description" style="padding-top: 60px;">
                     Complex and large amount of data is processed and stored on enterprise apps. Such data needs to be regulated in order for it to act as a guide for strategic decisions and business processes. Orcalo holdings has experienced professionals and tools to create and offer enterprise software development, software maintenance and minimum viable products amongst many others.
                 </p>
             </div>
-            <div class="col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
+            <div class="fade-up-section col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
                 <div class="cards-sec">
                     <div class="card-r text-center justify-content-end">
                         <div class="icon">
@@ -224,7 +242,7 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
+            <div class="fade-up-section col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
                 <div class="cards-sec">
                     <div class="card text-center">
                         <div class="icon">
@@ -235,8 +253,8 @@
                     </div>
                 </div>
             </div>
-            <div class="card-p  text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
-                <p class=" description">
+            <div class="fade-up-section card-p  text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
+                <p class=" description" style="padding-top: 60px;">
                     We are providing different maintenance modalities of support and operations that benefits continuous evolution of our products and services. We offer extensive support to our clients from the service experts in consultation, daily operations and optimized approach to emerging needs as one of our core added values.
                 </p>
             </div>
