--- a/pages/technology.html
+++ b/pages/technology.html
@@ -10,6 +10,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../components/navbar.css">
+    <link rel="stylesheet" href="../components/services.css">
+    <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
+    <style>
+        @keyframes fadeUp {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        /* Apply animation to cards and .row elements */
+        .card,
+        .row {
+            animation: fadeUp 0.5s ease forwards;
+        }
+    </style>
 </head>
 
 <body class="bg-light">
@@ -20,3 +41,315 @@
                 .then(data => document.querySelector('header').innerHTML = data);
         </script>
     </header>
+    <div class="container-fluid">
+        <div class="innerDivInFluid">
+            <div class="row cols-2 align-items-start">
+                <div class="col col-12 col-lg-6 text-start mb-5">
+                    <h1 class="main-heading h1-responsive">Tec<span class="text-primary">h</span>nologies</h1>
+                    <p class="mb-5 p-responsive"> Employing cutting-edge technologies and data-driven approach to
+                        overcome business challenges. Implementing new state-of-art software solutions depending on the
+                        business model with broad range of advance technologies to offer best solutions. </p>
+                </div>
+                <div class="col col-12 col-lg-6 text-end mb-5">
+                    <img src="../assets/images/Blockchain.png" class="banner-image img-fluid" width="92%">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="fade-up-section col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
+                <div class="cards-sec">
+                    <div class="card text-center">
+                        <div class="icon">
+                            <img alt="" src="../assets/images/engineering.png">
+                        </div>
+                        <h5 style="font-weight: 600;">01</h5>
+                        <h4 style="font-weight: 600;">iOS/ Android</h4>
+
+                        <p>We create innovative solutions to solve customer problems and give you more control over the
+                            product.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="fade-up-section card-p  text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
+                <p class=" description" style="padding-top: 60px;">
+                    New tech applications are custom-made every time to reach new audiences to drive business growth.
+                    Building these universal applications which run efficiently for long-term using advanced
+                    technologies such as AI/ML models and algorithms which work effectively on multi-orientation
+                    devices.
+                </p>
+            </div>
+            <hr>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="fade-up-section card-p card-tr text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
+                <p class=" description" style="padding-top: 60px;">
+                    Creating interesting web interactions, where user’s view directly about any product or service, we
+                    aim to develop and create advance system interfaces by constantly evolving with super-fast front-end
+                    technologies. With technologies like Angular, NodeJS, UX/UI etc. excelling in making classic,
+                    minimal, expressive designs with easy interactions to achieve accessibility, performance, and
+                    functionality.
+                </p>
+            </div>
+            <div class="fade-up-section col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
+                <div class="cards-sec">
+                    <div class="card-r text-center justify-content-end">
+                        <div class="icon">
+                            <img alt="" class="icon" src="../assets/images/ux-design.png">
+                        </div>
+                        <h5 style="font-weight: 600;">UI/UX Design</h5>
+                        <p> Designing success through creative web design for your business to be the best. Improving
+                            customer engagement with enhanced user experience. </p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="fade-up-section col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
+                <div class="cards-sec">
+                    <div class="card text-center">
+                        <div class="icon">
+                            <img alt="" src="../assets/images/cloud.png">
+                        </div>
+                        <h5 style="font-weight: 600;">Cloud Deployment</h5>
+                        <p>Accessibility made easy with cloud computing, offering cost minimization and supporting
+                            digital development.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="fade-up-section card-p  text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
+                <p class=" description" style="padding-top: 60px;">
+                    We build platforms for on growing and digitally driven businesses. With skilled professionals in
+                    both front-end (web design, UI and UX) and back-end (PHP, MySQL) technologies working
+                    collaboratively to create world-class solutions. Being tech-savvy organisation, we encourage our
+                    employees to share and develop cross-platform knowledge to get wider conceptualization into
+                    development.
+                </p>
+            </div>
+            <hr>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="fade-up-section card-p card-tr text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
+                <ul>
+                    <li>Advance data processing</li>
+                    <li>Data management</li>
+                    <li>Advance analysis</li>
+                    <li>Personalisation</li>
+                </ul>
+                <p class=" description" style="padding-top: 60px;">
+                World is data-driven, managing and analysing data is the difficult task that any industry is facing. We
+                all know that information gives access to many solutions. Big technological words like BIG Data, Data
+                visualisation assists in understanding the data and its characteristics to create solutions for customer
+                based on each industry verticals.
+                </p>
+            </div>
+            <div class="fade-up-section col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
+                <div class="cards-sec">
+                    <div class="card-r text-center justify-content-end">
+                        <div class="icon">
+                            <img alt="" class="icon" src="../assets/images/sco.png">
+                        </div>
+                        <h5 style="font-weight: 600;">Search Engine Optimization</h5>
+                        <p> Increase visibility of your platform with our SEO tricks, adapting to the changing
+                            algorithms. We help your business grow with enhanced search. </p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="fade-up-section col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
+                <div class="cards-sec">
+                    <div class="card text-center">
+                        <div class="icon">
+                            <img alt="" src="../assets/images/branding.png">
+                        </div>
+                        <h5 style="font-weight: 600;">Product Branding &amp; Design</h5>
+                        <p> We build the story for your product that defines your brand identity. We create brands that
+                            pass the test of time. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="fade-up-section card-p  text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
+                <p class=" description" style="padding-top: 60px;">
+                    Recommendation systems, Prediction system, Automated systems, Cognitive approach. Software platforms and applications with classic services is being advanced with ML techniques to provide best of service. With ML approach we can easily create models that automate data management, process to give advance and automatic systems for the repetitive tasks which enhances the services to the business.
+                </p>
+            </div>
+            <hr>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="fade-up-section card-p card-tr text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
+                <p class=" description" style="padding-top: 60px;">
+                    Chatbots, face recognition, NLP processing, Computer Vision. Building custom AI solutions to facilitate business operations to power up digital solution. Development of advance systems such as virtual assistants for customer services, easy accessibility of verification systems using techniques of Computer vision build on advance neural network framework. These custom AI technologies enhance the features of the application by automating the internal processes that leverage in creating winnable business strategies.
+                </p>
+            </div>
+            <div class="fade-up-section col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
+                <div class="cards-sec">
+                    <div class="card-r text-center justify-content-end">
+                        <div class="icon">
+                            <img alt="" class="icon" src="../assets/images/consultancy.png">
+                        </div>
+                        <h5 style="font-weight: 600;">Software Consultancy</h5>
+                        <p> Develop your MVP with our experts who help create a solution that solves customer problems.
+                            We fill in the technology gaps for you. </p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
+                <div class="cards-sec">
+                    <div class="card text-center">
+                        <div class="icon">
+                            <img alt="" src="../assets/images/devops.png">
+                        </div>
+                        <h5 style="font-weight: 600;">DevOps Automation</h5>
+                        <p> Establish a process of continuous experimentation and improvement with an integrated
+                            solution, catering the needs of agile processes. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-p  text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
+                <p class=" description" style="padding-top: 60px;">
+                    The IoT aims to deliver an increased productivity with reduced human interactive architecture by automising the workflow of the company. It provides easy communication through real-time data that aids the transformation of web-enabled smart systems to analyse business requirements more efficiently to deliver better customer service. Smart approaches and IoT devices are used to deliver data to the cloud edge, which provides digital intelligence that boosts revenue, improves performance, and meets regulatory compliance requirements.
+                </p>
+            </div>
+            <hr>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="fade-up-section card-p card-tr text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
+                <p class=" description" style="padding-top: 60px;">
+                    Complex and large amount of data is processed and stored on enterprise apps. Such data needs to be
+                    regulated in order for it to act as a guide for strategic decisions and business processes. Orcalo
+                    holdings has experienced professionals and tools to create and offer enterprise software
+                    development, software maintenance and minimum viable products amongst many others.
+                </p>
+            </div>
+            <div class="fade-up-section col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
+                <div class="cards-sec">
+                    <div class="card-r text-center justify-content-end">
+                        <div class="icon">
+                            <img alt="" class="icon" src="../assets/images/esd.png">
+                        </div>
+                        <h5 style="font-weight: 600;">Enterprise Software Development</h5>
+                        <p> We build solutions for enterprises in this rapidly changing enviornment, meeting their day
+                            to day needs. We offer strong community support from a team of experienced professionals.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="fade-up-section col-sm-12 col-md-5 col-lg-3 pb-5 firstText">
+                <div class="cards-sec">
+                    <div class="card text-center">
+                        <div class="icon">
+                            <img alt="" src="../assets/images/support.png">
+                        </div>
+                        <h5 style="font-weight: 600;">Support & Maintenance</h5>
+                        <p> We offer extended support to ensure that our applications are available, reliable and
+                            relevant to evolving business needs. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="fade-up-section card-p  text-start col-sm-12 col-md-7 col-lg-9 pb-5 firstText">
+                <p class=" description" style="padding-top: 60px;">
+                    We are providing different maintenance modalities of support and operations that benefits continuous
+                    evolution of our products and services. We offer extensive support to our clients from the service
+                    experts in consultation, daily operations and optimized approach to emerging needs as one of our
+                    core added values.
+                </p>
+            </div>
+            <hr>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <footer>
+            <div class="footer-bg">
+                <div class="container-fluid py-4">
+                    <div class="row">
+                        <div class="col-md-4 col-xl-2 mb-3">
+                            <div class="logo">
+                                <a href="/">
+                                    <img src="/assets/images/orcalo-logo.png" alt="" width="100%">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-xl-2 mb-3">
+                            <div class="links">
+                                <h6>Company</h6>
+                                <a href="#">Company Profile</a>
+                                <a href="#">Company Values</a>
+                                <a href="#">Partners</a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-xl-3 mb-3">
+                            <div class="links">
+                                <h6>Services</h6>
+                                <a href="#">Product Engineering</a>
+                                <a href="#">Mobile App Development</a>
+                                <a href="#">UI/UX Design</a>
+                                <a href="#">Software Consultancy</a>
+                                <a href="#">Cloud Deployment</a>
+                                <a href="#">DevOps Automation</a>
+                                <a href="#">Enterprise Software Development</a>
+                                <a href="#">Search Engine Optimization</a>
+                                <a href="#">Product Branding & Design</a>
+                                <a href="#">Support & Maintenance</a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-xl-3 mb-3">
+                            <div class="links">
+                                <h6>Technology</h6>
+                                <a href="#">iOS</a>
+                                <a href="#">Angular</a>
+                                <a href="#">Android</a>
+                                <a href="#">Node JS</a>
+                                <a href="#">Data Science</a>
+                                <a href="#">Machine Learning</a>
+                                <a href="#">Artificial Intelligence</a>
+                                <a href="#">AWS Cloud Solutions</a>
+                                <a href="#">Internet of Things IoT</a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-lg-2 mb-md-3">
+                            <div class="links">
+                                <h6 class="cursor-pointer">Careers</h6>
+                                <h6 class="cursor-pointer">Blogs</h6>
+                                <h6 class="cursor-pointer">Contact</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </footer>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
