--- a/index.html
+++ b/index.html
@@ -37,6 +37,68 @@
             <img src="../assets/images/service-img-1.png" alt="" srcset="">
         </div>
     </div>
+    <div class="container-fluid">
+        <footer>
+            <div class="footer-bg">
+                <div class="container-fluid py-4">
+                    <div class="row">
+                        <div class="col-md-4 col-xl-2 mb-3">
+                            <div class="logo">
+                                <a href="/">
+                                    <img src="/assets/images/orcalo-logo.png" alt="" width="100%">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-xl-2 mb-3">
+                            <div class="links">
+                                <h6>Company</h6>
+                                <a href="#">Company Profile</a>
+                                <a href="#">Company Values</a>
+                                <a href="#">Partners</a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-xl-3 mb-3">
+                            <div class="links">
+                                <h6>Services</h6>
+                                <a href="#">Product Engineering</a>
+                                <a href="#">Mobile App Development</a>
+                                <a href="#">UI/UX Design</a>
+                                <a href="#">Software Consultancy</a>
+                                <a href="#">Cloud Deployment</a>
+                                <a href="#">DevOps Automation</a>
+                                <a href="#">Enterprise Software Development</a>
+                                <a href="#">Search Engine Optimization</a>
+                                <a href="#">Product Branding & Design</a>
+                                <a href="#">Support & Maintenance</a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-xl-3 mb-3">
+                            <div class="links">
+                                <h6>Technology</h6>
+                                <a href="#">iOS</a>
+                                <a href="#">Angular</a>
+                                <a href="#">Android</a>
+                                <a href="#">Node JS</a>
+                                <a href="#">Data Science</a>
+                                <a href="#">Machine Learning</a>
+                                <a href="#">Artificial Intelligence</a>
+                                <a href="#">AWS Cloud Solutions</a>
+                                <a href="#">Internet of Things IoT</a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-lg-2 mb-md-3">
+                            <div class="links">
+                                <h6 class="cursor-pointer">Careers</h6>
+                                <h6 class="cursor-pointer">Blogs</h6>
+                                <h6 class="cursor-pointer">Contact</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+        </footer>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
