--- a/pages/services.html
+++ b/pages/services.html
@@ -11,6 +11,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../components/navbar.css">
     <link rel="stylesheet" href="../components/services.css">
+    <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
     <style>
          @keyframes fadeUp {
             from {
